name:                LTS
version:             0.1.0.0
synopsis:            Labelled Transition System
description:         This is an implementation of labelled transition system and
                     follow the README for information on importing and getting started.
license:             MIT
license-file:        LICENSE
author:              Ajay Kumar Eeralla
maintainer:          aeeralla@galois.com
copyright:           ©2020 Ajay Kumar Eeralla
category:            State Machines
build-type:          Simple
cabal-version:       >=1.10


extra-source-files:  CHANGELOG.md, README.md

Source-Repository head
  type:     git
  location: git@github.com:ajayeeralla/LTS.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Data.LTS

  build-depends:       base <=4.12,
                           fin


executable LTS
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base <=4.12,
                       LTS
  hs-source-dirs:      programs
  default-language:    Haskell2010
  ghc-options:         -Wall
